grammar.js
    nu_script: ($) => seq(optional($.shebang), optional($._block_body)),

    _block_body: ($) =>
      seq(
        prec.right(repeat(seq($._block_body_statement, repeat($._terminator)))),
        $._block_body_statement_last,
        repeat($._terminator),
      ),

    /// Identifiers
    // NOTE:
    // for simplicity, i used the `rust` definition of an identifier and some symbols
    // but in `nu` the rule is way more relaxed than this

    cmd_identifier: (_$) => token(/[_\p{XID_Start}][_\-\p{XID_Continue}!?.]*/),

    identifier: (_$) => token(/[_\p{XID_Start}][_\p{XID_Continue}]*/),

    _long_flag_identifier: (_$) =>
      token.immediate(/[\p{XID_Start}_][\p{XID_Continue}_-]*/),

    _command_name: ($) =>
      choice(
        field("unquoted_name", $.cmd_identifier),
        field("quoted_name", $.val_string),
      ),

    _variable_name: ($) =>
      choice(
        field("var_name", $.identifier),
        field("dollar_name", $.val_variable),
      ),

    parameter_pipes: ($) => seq(PUNC().pipe, repeat($.parameter), PUNC().pipe),

    parameter: ($) =>
      seq(
        choice(
          $._param_name,
          field("param_long_flag", $.param_long_flag),
          field(
            "param_long_flag",
            seq($.param_long_flag, field("flag_capsule", $.flag_capsule)),
          ),
        ),
        optional(
          choice(
            $.param_type,
            $.param_value,
            seq($.param_value, $.param_type),
            seq($.param_type, $.param_value),
          ),
        ),
        optional(PUNC().comma),
      ),

    _param_name: ($) =>
      choice(
        field("param_rest", $.param_rest),
        field("param_optional", $.param_opt),
        field("param_name", seq(optional("$"), $.identifier)),
        field("param_short_flag", $.param_short_flag),
      ),

    _ctrl_statement: ($) =>
      choice($.ctrl_for, $.ctrl_loop, $.ctrl_while, $.ctrl_error),

    // control expressions *return values and can be used in pipelines
    //
    // * `break` and `continue` do not return values (yet?) but can be
    // used in pipelines
    _ctrl_expression: ($) =>
      choice(
        field("ctrl_break", KEYWORD().break),
        field("ctrl_continue", KEYWORD().continue),
        $.ctrl_do,
        $.ctrl_if,
        $.ctrl_try,
        $.ctrl_match,
        $.ctrl_return,
      ),

    _ctrl_expression_parenthesized: ($) =>
      choice(
        field("ctrl_break", KEYWORD().break),
        field("ctrl_continue", KEYWORD().continue),
        $.ctrl_do,
        alias($.ctrl_if_parenthesized, $.ctrl_if),
        alias($.ctrl_try_parenthesized, $.ctrl_try),
        $.ctrl_match,
        $.ctrl_return,
      ),

    // Standalone Controls

    ctrl_if: ($) =>
      seq(
        KEYWORD().if,
        field("condition", choice($._expression, $.identifier)),
        field("then_branch", $.block),
        optional(
          seq(
            KEYWORD().else,
            choice(
              field("else_block", choice($.block, $._expression, $.command)),
              field("else_branch", $.ctrl_if),
            ),
          ),
        ),
      ),

    pipe_element: ($) =>
      seq(
        choice(
          prec.right(69, $._expression),
          $._ctrl_expression,
          $.where_command,
          $.command,
        ),
        // Allow for empty pipeline elements like `ls | | print`
        repeat1(seq(optional("\n"), PUNC().pipe)),
        optional("\n"),
      ),

    pipe_element_parenthesized: ($) =>
      seq(
        choice(
          prec.right(69, $._expression),
          $._ctrl_expression_parenthesized,
          $.where_command,
          alias($._command_parenthesized_body, $.command),
        ),
        // Allow for empty pipeline elements like `ls | | print`
        repeat1(seq(optional("\n"), PUNC().pipe)),
        optional("\n"),
      ),

    stmt_source: ($) =>
      seq(
        choice(KEYWORD().source, KEYWORD().source_env),
        field(
          "file",
          choice(
            alias($.unquoted, $.val_string),
            $.val_string,
            $.expr_parenthesized,
            $.val_variable,
            $.val_interpolated,
          ),
        ),
      ),

    _stmt_hide: ($) => choice($.hide_mod, $.hide_env),

    _stmt_overlay: ($) =>
      choice($.overlay_hide, $.overlay_list, $.overlay_new, $.overlay_use),

    assignment: ($) => {
      const opr = [
        PUNC().eq,
        OPR().assign_add,
        OPR().assign_sub,
        OPR().assign_mul,
        OPR().assign_div,
        OPR().assign_append,
      ];

      return prec.left(
        PREC().assignment,
        seq(
          field("lhs", $.val_variable),
          field("opr", choice(...opr)),
          field("rhs", $._expression),
        ),
      );
    },

    /// Block

    block: ($) =>
      seq(BRACK().open_brace, optional($._block_body), BRACK().close_brace),

    where_command: ($) =>
      seq(
        "where",
        choice(
          $._where_predicate,
          $._expression,
          alias($.block, $.val_closure),
        ),
      ),

    _where_predicate: ($) =>
      choice(
        ...TABLE().map(([precedence, opr]) =>
          prec.left(
            // @ts-ignore
            precedence,
            seq(
              field(
                "lhs",
                choice(
                  seq(
                    choice(alias($.identifier, $.val_string), $.val_number),
                    optional(PUNC().question),
                    optional($.cell_path),
                  ),
                  $.val_variable,
                ),
              ),
              optional(
                seq(
                  // @ts-ignore
                  field("opr", opr),
                  field("rhs", choice($._expression, $._where_predicate)),
                ),
              ),
            ),
          ),
        ),
      ),

    /// Expressions

    _expression: ($) =>
      choice(
        $._value,
        $.expr_binary,
        $.expr_unary,
        $.val_range,
        $.expr_parenthesized,
      ),

    /// Composite Expressions

    expr_binary: ($) =>
      choice(
        ...TABLE().map(([precedence, opr]) =>
          prec.right(
            // @ts-ignore
            precedence,
            seq(
              field("lhs", $._expr_binary_expression),
              // @ts-ignore
              field("opr", opr),
              field(
                "rhs",
                choice(
                  $._expr_binary_expression,
                  alias($.unquoted, $.val_string),
                ),
              ),
            ),
          ),
        ),
      ),

    _expr_binary_expression: ($) =>
      choice($._value, $.expr_binary, $.expr_unary, $.expr_parenthesized),

    expr_parenthesized: ($) =>
      seq(
        BRACK().open_paren,
        $._parenthesized_body,
        BRACK().close_paren,
        optional($.cell_path),
      ),

    _parenthesized_body: ($) =>
      seq(
        prec.right(
          repeat(
            seq($._block_body_statement_parenthesized, repeat($._terminator)),
          ),
        ),
        $._block_body_statement_parenthesized_last,
        repeat($._terminator),
      ),

    val_bool: (_$) => choice(SPECIAL().true, SPECIAL().false),

    val_variable: ($) => choice($._var, seq($._var, $.cell_path)),

    _var: ($) =>
      seq(
        PUNC().dollar,
        field("name", choice("nu", "in", "env", $.identifier)),
      ),

    val_number: ($) => $._val_number,

    _val_number_decimal: _decimal_rule(false),

    // separating floats from integers does not end well
    // especially when it comes to incorporation with ranges.
    _val_number: ($) =>
      choice(
        $._val_number_decimal,
        /0x[0-9a-fA-F_]+/,
        /0b[01_]+/,
        /0o[0-7_]+/,
        $.math_keyword,
      ),

    val_filesize: ($) =>
      seq(field("value", $.val_number), field("unit", $.filesize_unit)),

    // prettier-ignore
    filesize_unit: (_$) => token(choice(
      "b", "B",

      "kb", "kB", "Kb", "KB",
      "mb", "mB", "Mb", "MB",
      "gb", "gB", "Gb", "GB",
      "tb", "tB", "Tb", "TB",
      "pb", "pB", "Pb", "PB",
      "eb", "eB", "Eb", "EB",

      "kib", "kiB", "kIB", "kIb", "Kib", "KIb", "KIB",
      "mib", "miB", "mIB", "mIb", "Mib", "MIb", "MIB",
      "gib", "giB", "gIB", "gIb", "Gib", "GIb", "GIB",
      "tib", "tiB", "tIB", "tIb", "Tib", "TIb", "TIB",
      "pib", "piB", "pIB", "pIb", "Pib", "PIb", "PIB",
      "eib", "eiB", "eIB", "eIb", "Eib", "EIb", "EIB",
    )),

    // prettier-ignore
    val_string: ($) =>
      choice(
        $._str_double_quotes,
        $._str_single_quotes,
        $._str_back_ticks,
        $.raw_string_literal,
      ),

    _str_double_quotes: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $._escaped_str_content,
            // double quoted strings accept escapes
            $.escape_sequence,
          ),
        ),
        '"',
      ),

    _str_single_quotes: (_$) => /'[^']*'/,

    _str_back_ticks: (_$) => /`[^`]*`/,

    val_interpolated: ($) =>
      choice($._inter_single_quotes, $._inter_double_quotes),

    _inter_single_quotes: ($) =>
      seq(
        "$'",
        repeat(
          choice(
            field("expr", $.expr_interpolated),
            $.unescaped_interpolated_content,
          ),
        ),
        token.immediate("'"),
      ),

    _inter_double_quotes: ($) =>
      seq(
        '$"',
        repeat(
          choice(
            field("expr", $.expr_interpolated),
            $.inter_escape_sequence,
            // double quoted strings accept escapes
            $.escaped_interpolated_content,
          ),
        ),
        token.immediate('"'),
      ),

    expr_interpolated: ($) =>
      seq(BRACK().open_paren, $._block_body, BRACK().close_paren),

    /// Collections

    val_list: ($) =>
      seq(
        BRACK().open_brack,
        prec(20, optional($.list_body)),
        BRACK().close_brack,
        optional($.cell_path),
      ),

    list_body: general_body_rules("entry", "val_entry", "_entry_separator"),

    val_entry: ($) =>
      field(
        "item",
        choice(
          $._list_item_expression,
          alias($._unquoted_in_list, $.val_string),
          alias($.short_flag, $.val_string),
          alias($.long_flag, $.val_string),
          alias($._list_item_starts_with_sign, $.val_string),
        ),
      ),

    _list_item_expression: ($) =>
      choice(
        $._value,
        alias($._expr_unary_minus, $.expr_unary),
        $.val_range,
        $.expr_parenthesized,
      ),

    _list_item_starts_with_sign: (_$) =>
      choice(/[+-]([^-$\s\n\t\r{}()\[\]"`';,]+)?/),

    val_closure: ($) =>
      seq(
        BRACK().open_brace,
        optional(field("parameters", $.parameter_pipes)),
        $._block_body,
        BRACK().close_brace,
      ),

    /// CellPaths

    cell_path: ($) => prec.right(1, seq($.path, repeat($.path))),

    path: ($) => {
      const quoted = choice(
        $._str_double_quotes,
        $._str_single_quotes,
        $._str_back_ticks,
      );

      const path = choice(prec.right(2, token(/[0-9a-zA-Z_-]+/)), quoted);

      return seq(
        token.immediate(PUNC().dot),
        choice(
          field("raw_path", path),
          field("protected_path", seq(path, PUNC().question)),
        ),
      );
    },

    /// Commands

    command: ($) =>
      seq(
        choice(
          field("head", seq(optional(PUNC().caret), $.cmd_identifier)),
          field("head", seq(PUNC().caret, $.val_string)), // Support for ^'command' type of syntax.
          field("head", seq(PUNC().caret, $.expr_parenthesized)), // Support for pipes into external command.
        ),
        prec.dynamic(10, repeat($._cmd_arg)),
      ),

    _command_parenthesized_body: ($) =>
      prec.right(
        seq(
          choice(
            field("head", seq(optional(PUNC().caret), $.cmd_identifier)),
            field("head", seq(PUNC().caret, $.val_string)), // Support for ^'command' type of syntax.
            field("head", seq(PUNC().caret, $.expr_parenthesized)), // Support for pipes into external command.
          ),
          prec.dynamic(10, repeat(seq(optional("\n"), $._cmd_arg))),
          optional("\n"),
        ),
      ),

    _cmd_arg: ($) =>
      seq(
        /\s/,
        choice(
          field("redir", prec.right(10, $.redirection)),
          field("flag", prec.right(9, $._flag)),
          field("arg", prec.right(8, $._value)),
          field("arg", prec.right(8, $.val_range)),
          field("arg", prec.right(7, $.expr_parenthesized)),
          // lowest precedence to make it a last resort
          field("arg_str", alias($.unquoted, $.val_string)),
        ),
      ),
